@@ -3,8 +3,9 @@ package com.example.hobbybungae.domain.post.service;
 import com.example.hobbybungae.domain.hobby.entity.Hobby;
 import com.example.hobbybungae.domain.hobby.exception.NotFoundHobbyException;
 import com.example.hobbybungae.domain.hobby.service.HobbyService;
-import com.example.hobbybungae.domain.post.dto.PostRequestDto;
+import com.example.hobbybungae.domain.post.dto.PostAddRequestDto;
 import com.example.hobbybungae.domain.post.dto.PostResponseDto;
+import com.example.hobbybungae.domain.post.dto.PostUpdateRequestDto;
 import com.example.hobbybungae.domain.post.entity.Post;
 import com.example.hobbybungae.domain.post.exception.InvalidPostModifierException;
 import com.example.hobbybungae.domain.post.exception.NotFoundPostException;
@@ -13,9 +14,12 @@ import com.example.hobbybungae.domain.state.exception.NotFoundStateException;
 import com.example.hobbybungae.domain.state.service.StateService;
 import com.example.hobbybungae.domain.user.entity.User;
 import java.util.List;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -46,8 +50,7 @@ public class PostService {
 		log.info("취미 검증 통과");
 	}
 
-	public PostResponseDto addPost(PostRequestDto requestDto, User user)
-		throws NotFoundHobbyException, NotFoundStateException {
+	public PostResponseDto addPost(PostAddRequestDto requestDto, User user) throws NotFoundHobbyException, NotFoundStateException {
 		log.info("Post Service :: addPost");
 
 		// 취미카테고리 & 지역 데이터 존재여부 검증
@@ -80,13 +83,19 @@ public class PostService {
 	}
 
 	@Transactional(readOnly = true)
-	public List<PostResponseDto> getPosts() {
-		return postRepository.findAllByOrderByCreatedAtDesc().stream()
+	public List<PostResponseDto> getPosts(int page, int size, String sortBy, boolean isAsc) {
+		Sort.Direction direction = isAsc ? Sort.Direction.ASC : Sort.Direction.DESC;
+		Sort sort = Sort.by(direction, sortBy);
+		Pageable pageable = PageRequest.of(page, size, sort);
+
+		Page<Post> postList = postRepository.findAll(pageable);
+		List<PostResponseDto> responseDtos = postList.stream()
 			.map(PostResponseDto::new)
-			.collect(Collectors.toList());
+			.toList();
+		return responseDtos;
 	}
 
-	public PostResponseDto updatePost(Long postId, PostRequestDto requestDto, User user)
+	public PostResponseDto updatePost(Long postId, PostUpdateRequestDto requestDto, User user)
 		throws InvalidPostModifierException {
 		Post post = getPostById(postId);
 		validateUserIsAuthor(post.getUser().getId(), user.getId());
